<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Spinner
            android:id="@+id/reusableEditFoodType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            android:entries="@array/foodTypes_spinner_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditFoodType" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditQuantityText"
                android:hint="@string/reusable_edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditPickupTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditFoodType" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditPickupTimeText"
                android:hint="@string/reusable_edit_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditQuantity" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditAddressText"
                android:hint="@string/reusable_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditContactInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditAddress" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditContactInfoText"
                android:hint="@string/reusable_edit_contact_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditExpiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditContactInfo" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditExpirationText"
                android:hint="@string/reusable_edit_expiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditExpiration" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditDescriptionText"
                android:hint="@string/reusable_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/reusableEditReadiness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            android:entries="@array/readiness_spinner_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditDescription" />

        <Spinner
            android:id="@+id/reusableEditStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            android:entries="@array/status_spinner_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditReadiness" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reusableEditComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginStart="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginLeft="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginRight="@dimen/reusable_edit_horizontal_margin"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reusableEditStatus" >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reusableEditCommentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reusable_edit_comment"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>